src/test/deca/context/valid/personalTests/ObjetComplet.deca
class C {
int x;
int y=1;
int getX() {
return x;
}
void incrX() {
x = x + 1;
}
}

class D extends C {
int x=3;
int z;
}

class P {
int x;
int y;
void move(int a, int b) {
x = x + a;
y = y + b;
}
}



{
C c = new C();
println(c.x);
println(c.y);
c.incrX();
c.incrX();
c.incrX();
c.incrX();
println(c.x);
}